--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "Emitter module.",
   "type": "module",
   "main": "./cjs/index.js",
-  "directories": {
-    "test": "test"
-  },
+  "packageManager": "pnpm@10.6.3",
   "scripts": {
     "test": "make test",
     "preversion": "make test",
@@ -25,11 +23,15 @@
   "author": "Mirek Rusin (https://github.com/mirek)",
   "license": "MIT",
   "devDependencies": {
-    "@tsconfig/node16": "1.0.3",
-    "@types/jest": "28.1.6",
-    "eslint": "8.22.0",
-    "jest": "28.1.3",
-    "typescript": "4.7.4"
+    "@babel/plugin-proposal-decorators": "^7.25.9",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-typescript": "^7.26.0",
+    "@jest/globals": "^29.7.0",
+    "@tsconfig/node22": "^22.0.0",
+    "@types/jest": "^29.5.14",
+    "eslint": "^9.22.0",
+    "jest": "^29.7.0",
+    "typescript": "^5.8.2"
   },
   "module": "./mjs/index.js",
   "exports": {
@@ -44,5 +46,9 @@
     "./*": {
       "require": "./cjs/*.js"
     }
+  },
+  "dependencies": {
+    "@prelude/err": "0.2.1",
+    "@prelude/log": "1.0.0"
   }
 }
